Fixed dg mistake

--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,7 @@
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="mioh0887@colorado.edu">Mike</maintainer>
+  <license>TODO</license>
  
   <!-- The *_depend tags are used to specify dependencies -->
   <!-- Dependencies can be catkin packages or system dependencies -->
